--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -11,6 +21,8 @@ a:active {
 }
 ul {
   list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
 
 body {
@@ -47,9 +59,44 @@ h3 {
 button {
   cursor: pointer;
 }
-
+.page-container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  > main {
+    flex-grow: 1;
+  }
+}
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
+}
+.header > .container {
+  display: flex;
+  justify-content: space-between;
+}
 .header-nav {
+  display: flex;
+  justify-content: space-between;
   color: #2e2f42;
+  gap: 76px;
+}
+.header-menu {
+  display: flex;
+  gap: 40px;
+}
+.header-contacts-list {
+  display: flex;
+  gap: 40px;
 }
 
 .header-logo {
@@ -87,6 +134,8 @@ button {
 }
 .hero-title {
   text-align: center;
+  max-width: 496px;
+  margin: 0 auto 48px;
 }
 .hero-button {
   background-color: #4d5ae5;
@@ -105,15 +154,24 @@ button {
 }
 .team-title {
   text-align: center;
+  margin-bottom: 72px;
 }
 .team-card {
   background-color: #fff;
+  text-align: center;
+  padding-bottom: 32px;
+}
+.team-card-name {
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 .portfolio-title {
   text-align: center;
 }
 .footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-logo {
   font-family: Raleway, sans-serif;
@@ -123,10 +181,30 @@ button {
   letter-spacing: 0.03em;
   font-weight: 700;
   color: #4d5ae5;
+  margin-bottom: 16px;
 }
 .footer-logo-span {
   color: #f4f4fd;
 }
 .footer-text {
+  max-width: 264px;
   color: #f4f4fd;
+}
+.advantages-cards-list {
+  display: flex;
+  justify-content: space-between;
+}
+.team-cards-list {
+  display: flex;
+  justify-content: space-between;
+}
+.portfolio-cards-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
