--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,9 @@ h3 {
 button {
   cursor: pointer;
 }
+img {
+  display: block;
+}
 .page-container {
   min-height: 100%;
   display: flex;
@@ -167,6 +170,7 @@ button {
 }
 .portfolio-title {
   text-align: center;
+  margin-bottom: 72px;
 }
 .footer {
   background-color: #2e2f42;
@@ -194,6 +198,7 @@ button {
 .advantages-cards-list {
   display: flex;
   justify-content: space-between;
+  gap: 24px;
 }
 .team-cards-list {
   display: flex;
@@ -203,9 +208,36 @@ button {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.advantages-card-title {
+  margin-bottom: 8px;
+}
+.portfolio-cards-text {
+  padding: 32px 0 32px 16px;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
+}
+.portfolio-card-title {
+  margin-bottom: 8px;
 }
