--- a/css/styles.css
+++ b/css/styles.css
@@ -79,22 +79,23 @@ img {
   margin-right: auto;
 }
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid #e7e9fc;
 }
 .header > .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .header-nav {
   display: flex;
   justify-content: space-between;
   color: #2e2f42;
-  gap: 76px;
+  align-items: center;
 }
 .header-menu {
   display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
   gap: 40px;
 }
 .header-contacts-list {
@@ -110,6 +111,7 @@ img {
   letter-spacing: 0.03em;
   font-weight: 700;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 .logo-span {
   color: #2e2f42;
